# LLM_Utilized_Rank

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: eval_harness.yaml  finetune_freeze.yaml  finetune_full.yaml  finetune_lora.yaml  gpt2-small.yaml  llama2-7b.yaml  llama3-8b.yaml  rank_search_defaults.yaml
configs/rank_policies/: mlp_heavier.yaml  qkv_heavier.yaml  uniform.yaml
scripts/: allocate_ranks.py  apply_compression.py  collect_activations.py  collect_output_activations.py  debug_gradient_issue.py  eval_lm_eval.py  eval_perplexity.py  export_compressed_model.py  finetune.py  finetune_compressed.py  finetune_llamafactory.py  inspect_model.py  search_ranks.py  search_ranks_energy.py  search_ranks_weight_svd.py  setup_llamafactory_datasets.py  test_architecture_registration.py  test_energy_ranks.py  test_export_factorized.py  test_json_sanitization.py  test_lora_factorized.py  test_output_stats.py
src/urank/: __init__.py  activation_cache.py  compression.py  configuration_gpt2_compressed.py  configuration_llama_compressed.py  instrumentation.py  lora_factorized.py  modeling_gpt2_compressed.py  modeling_llama_compressed.py  policies.py  rank_search.py  subspace.py  transform.py  utils.py
src/urank/eval/: __init__.py  harness.py  perplexity.py
tests/: test_rank_search.py  test_subspace.py  test_transform.py
